# BufferString

./: .gitignore  BufferString.c  CMakeLists.txt  README.md
.github/workflows/: cmake-ci.yml
Tests/: CMakeLists.txt  main.c
Tests/BufferString/: BufferStringTest.h
cmake/: CodeCoverage.cmake
include/: BufferString.h
